--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@headlessui/react": "^1.7.17",
       "@iconify/react": "^4.1.1",
       "framer-motion": "^10.16.16",
+      "lottie-react": "^2.4.0",
       "next": "14.0.4",
       "react": "^18",
       "react-dom": "^18",
